# autoresearch

./: README.md  pyproject.toml  train.py
Code/: Dataset.py  FullTrainLoop.py  PSDDataset.py  SplineEstimator.py  TestDataset.py  reconstruct.py  utils.py
