[project]
name = "autoresearch"
version = "0.1.0"
description = "Autonomous pretraining research swarm"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kernels>=0.11.7",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "requests>=2.33.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
    "torch>=2.10.0",
    "nibabel>=5.3.3",
    "niftiview>=1.1.2",
    "pathlib>=1.0.1",
    "pydicom>=3.0.1",
    "scipy>=1.15.3",
    "torchvision>=0.25.0",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu126" }]
torchvision = [{ index = "pytorch-cu126" }]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
